fixed video height on tablet

--- a/code/style.css
+++ b/code/style.css
@@ -356,6 +356,12 @@ footer {
     
   }
 
+  #hero video {
+    width: auto;
+    height: 100%;
+    
+  }
+
   .the-big-container {
     margin: 0;
     padding: 0;
@@ -396,7 +402,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    object-fit: ;
+    object-fit: cover;
   }
 
   
